--- a/about.html
+++ b/about.html
@@ -55,34 +55,21 @@
             approach to tackling them, led a group of curators, librarians, information scientists,
             researchers, and developers representing the different laboratories to form a working group to
             identify emerging issues and share expertise in data curation.</p>
-        <h3 id="about" class="mt-4">Our Goal</h3>
-        <p>The goal of the DOE Data Curation Working Group (DOE DCWG) is to address the full lifecycle of
-            data--from data management planning
-            and ensuring early liaison engagement with scientists to establishing data curation standards and tools,
-            data literacy materials, and repository best practices as well as citation-level metadata harvesting
-            protocols as informed by the
-            <a href="https://www.go-fair.org/fair-principles/"> FAIR data principles</a>.
-            As a strategic, cross-functional decision-making entity, the DCWG identified
-            <a href="#objectives">7 objectives</a> that members work asynchronously on
-            throughout the fiscal year.
-            This allows the group to focus on implementing data curation best practices that are adapted to the DOE
-            National Laboratories environment. By sharing this model, we hope to share our challenges and successes
-            and receive feedback from the larger data curation community on the efforts of the working group.
+        <h3 id="about" class="mt-4">Goals</h3>
+        <p>The DOE Data Curation Working Group (DOE DCWG) addresses the full data lifecycle—from management planning and early scientist engagement to establishing curation standards, tools, literacy materials, repository best practices, and citation-level metadata harvesting protocols aligned with 
+            <a href="https://www.go-fair.org/fair-principles/"> FAIR principles</a>.
+            As a strategic, cross-functional body, the DCWG pursues initiatives asynchronously throughout the year, implementing data curation best practices adapted for DOE National Laboratories. By sharing this model, we aim to exchange challenges and successes with the broader data curation community and receive feedback on our efforts.
         </p>
-        <h3 id="objectives" class="mt-4">Seven Objectives of the DCWG</h2>
-            <li> Work with DOE OSTI (Office of Scientific and Technical Information) to come up with a more mature
-                data sharing plan and discovery layer</li>
-            <li> Research and implement metadata and ontologies that improve discovery and interoperability at the
-                general and specialist/disciplinary level</li>
-            <li> Develop a "Data Curator Toolkit" to help curators asses datasets when they are too large to curate
-                manually</li>
-            <li> Develop best practices for Machine Actionable Data Management Plans that reflect the needs of the
-                laboratories</li>
-            <li> Develop best practices for liaison work and training</li>
-            <li> In collaboration with our partners at Data Curation Network (DCN) create documentation and primers
-                for curators</li>
-            <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how
-                accessing various repository metadata can allow for semantic search capabilities</li>
+        <h3 id="objectives" class="mt-4">FY25 Initiatives</h2>
+            <li> Advanced metadata harmonization for repositories; created the Data Repository Metadata Profile </li>
+            <li> Expanded AI Data Readiness discussions</li>
+            <li> Elevated Review and Release practices  </li>
+            <li> Strengthened Workforce Development focus</li>
+            <li> Expanded community participation</li>
+        <h3 id="objectives" class="mt-4">Previous year's work</h2>
+        <li> Developed best practices for liaison work and training</li>
+            <li> Developed a primer for telemetry data in collaboration with our partners at Data Curation Network (DCN) </li>
+            <li> Collaborated with DOE OSTI (Office of Scientific and Technical Information) on maturing the data sharing plan and discovery layer</li>
              </main>
     <!-- Footer Banner -->
     <div class="footer-banner shadow-lg">
