--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 <div style="display: flex; gap: 40px; align-items: stretch;">
   
   <!-- Left Column -->
-  <div style="width: 50%; flex: none;">
-    <p style="text-align: left;">DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.</p>
+  <div style="width: 50%; flex: none; display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center;">
+    <p>DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.</p>
     <br>
     
-    <a href="https://forms.office.com/g/L9sDFEZwQC" style="background-color: #2C6235; color: white; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-family: Arial, sans-serif; font-weight: bold; display: inline-block;">Join the DCWG!</a>
+    <a href="https://forms.office.com/g/L9sDFEZwQC" style="background-color: #2C6235; color: white; padding: 18px 36px; text-decoration: none; border-radius: 8px; font-family: Arial, sans-serif; font-weight: bold; display: inline-block; font-size: 18px;">Join the DCWG!</a>
     <br><br>
     
     <img src="doedcwg_gitpage_image.png" width="300">
@@ -63,7 +63,7 @@
   
   <!-- Right Column -->
   <div style="width: 50%; flex: none; border: 2px solid #ccc; padding: 20px; border-radius: 8px; background-color: #f9f9f9;">
-    <h3 style="margin-top: 0;">Laboratories and DOE Offices with Participating Members</h3>
+    <h3 style="margin-top: 0; text-align: center;">Laboratories and DOE Offices with Participating Members</h3>
     <ul>
       <li>Argonne National Laboratory (ANL)</li>
       <li>DOE Office of Scientific and Technical Information (OSTI)</li>
@@ -87,7 +87,7 @@
     </main>
     <!-- Footer Banner -->
     <div class="footer-banner shadow-lg">
-        <span style="color: black;">© 2023 Department of Energy Data Curation Working Group</span>
+        <span style="color: black;">© 2026 Department of Energy Data Curation Working Group</span>
     </div>
     <!-- Include Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
