--- a/about.html
+++ b/about.html
@@ -66,14 +66,14 @@
             <li> Elevated Review and Release practices  </li>
             <li> Strengthened Workforce Development focus</li>
             <li> Expanded community participation</li>
-        <h3 id="objectives" class="mt-4">Previous year's work</h2>
+        <h3 id="objectives" class="mt-4">Previous Year's Work</h2>
         <li> Developed best practices for liaison work and training</li>
-            <li> Developed a primer for telemetry data in collaboration with our partners at Data Curation Network (DCN) </li>
+            <li> Developed a <a href="https://osf.io/4kgjm/files/q93kz"> primer for telemetry data</a> in collaboration with our partners at Data Curation Network (DCN) </li>
             <li> Collaborated with DOE OSTI (Office of Scientific and Technical Information) on maturing the data sharing plan and discovery layer</li>
              </main>
     <!-- Footer Banner -->
     <div class="footer-banner shadow-lg">
-        <span style="color: black;">© 2023 Department of Energy Data Curation Working Group</span>
+        <span style="color: black;">© 2026 Department of Energy Data Curation Working Group</span>
     </div>
     <!-- Include Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
