--- a/index.html
+++ b/index.html
@@ -62,26 +62,26 @@
   </div>
   
   <!-- Right Column -->
-  <div style="width: 50%; flex: none; border: 2px solid #ccc; padding: 20px; border-radius: 8px; background-color: #f9f9f9;">
-    <h3 style="margin-top: 0; text-align: center;">Laboratories and DOE Offices with Participating Members</h3>
-    <ul>
-      <li>Argonne National Laboratory (ANL)</li>
-      <li>DOE Office of Scientific and Technical Information (OSTI)</li>
-      <li>Idaho National Laboratory (INL)</li>
-      <li>Lawrence Berkeley National Laboratory (LBNL)</li>
-      <li>Lawrence Livermore National Laboratory (LLNL)</li>
-      <li>Los Alamos National Laboratory (LANL)</li>
-      <li>National Energy Technology Laboratory (NETL)</li>
-      <li>National Laboratory of the Rockies (NLR)</li>
-      <li>Oak Ridge National Laboratory (ORNL)</li>
-      <li>Pacific Northwest National Laboratory (PNNL)</li>
-      <li>Princeton Plasma Physics Laboratory (PPPL)</li>
-      <li>Sandia National Laboratories (SNL)</li>
-      <li>Savannah River National Laboratory (SRNL)</li>
-      <li>SLAC National Accelerator Laboratory (SLAC)</li>
-      <li>Thomas Jefferson National Laboratory (JLAB)</li>
-    </ul>
-  </div>
+<div style="width: 50%; flex: none; border: 3px solid #2C6235; padding: 25px; border-radius: 12px; background-color: #f8fff8;">
+  <h3 style="margin-top: 0; text-align: center; color: #2C6235; font-size: 20px; margin-bottom: 20px; border-bottom: 2px solid #2C6235; padding-bottom: 10px;">Laboratories and DOE Offices with Participating Members</h3>
+  <ul style="columns: 1; column-gap: 20px; color: #2C6235;">
+    <li>Argonne National Laboratory (ANL)</li>
+    <li>DOE Office of Scientific and Technical Information (OSTI)</li>
+    <li>Idaho National Laboratory (INL)</li>
+    <li>Lawrence Berkeley National Laboratory (LBNL)</li>
+    <li>Lawrence Livermore National Laboratory (LLNL)</li>
+    <li>Los Alamos National Laboratory (LANL)</li>
+    <li>National Energy Technology Laboratory (NETL)</li>
+    <li>National Laboratory of the Rockies (NLR)</li>
+    <li>Oak Ridge National Laboratory (ORNL)</li>
+    <li>Pacific Northwest National Laboratory (PNNL)</li>
+    <li>Princeton Plasma Physics Laboratory (PPPL)</li>
+    <li>Sandia National Laboratories (SNL)</li>
+    <li>Savannah River National Laboratory (SRNL)</li>
+    <li>SLAC National Accelerator Laboratory (SLAC)</li>
+    <li>Thomas Jefferson National Laboratory (JLAB)</li>
+  </ul>
+</div>
   
 </div>
     </main>
