--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
   </div>
   
 </div>
+        <!-- FY25 Initiatives Section Below -->
+<br><br>
+<h3 id="objectives" class="mt-4">FY25 Initiatives</h3>
+<ul>
+    <li>Advanced metadata harmonization for repositories; created the Data Repository Metadata Profile</li>
+    <li>Expanded AI Data Readiness discussions</li>
+    <li>Elevated Review and Release practices</li>
+    <li>Strengthened Workforce Development focus</li>
+    <li>Expanded community participation</li>
+</ul>
     </main>
     <!-- Footer Banner -->
     <div class="footer-banner shadow-lg">
