--- a/index.html
+++ b/index.html
@@ -88,14 +88,16 @@
 </div>
         <!-- FY25 Initiatives Section Below -->
 <br><br>
-<h3 id="objectives" class="mt-4">FY25 Initiatives</h3>
-<ul>
-    <li>Advanced metadata harmonization for repositories; created the Data Repository Metadata Profile</li>
-    <li>Expanded AI Data Readiness discussions</li>
-    <li>Elevated Review and Release practices</li>
-    <li>Strengthened Workforce Development focus</li>
-    <li>Expanded community participation</li>
-</ul>
+<div style="background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%); padding: 35px; border-radius: 15px; box-shadow: 0 8px 25px rgba(0,0,0,0.1); margin: 20px 0; width: 100%; box-sizing: border-box;">
+  <h3 style="margin-top: 0; text-align: center; color: #2C6235; font-size: 24px; margin-bottom: 25px;">FY25 Initiatives</h3>
+  <ul style="columns: 2; column-gap: 50px; font-size: 16px; line-height: 1.7; color: #333; max-width: 100%;">
+    <li style="margin-bottom: 12px;">Advanced metadata harmonization for repositories; created the Data Repository Metadata Profile</li>
+    <li style="margin-bottom: 12px;">Expanded AI Data Readiness discussions</li>
+    <li style="margin-bottom: 12px;">Elevated Review and Release practices</li>
+    <li style="margin-bottom: 12px;">Strengthened Workforce Development focus</li>
+    <li style="margin-bottom: 12px;">Expanded community participation</li>
+  </ul>
+</div>
     </main>
     <!-- Footer Banner -->
     <div class="footer-banner shadow-lg">
